--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./Styles/styles.css">
     <title>My resume</title>
 </head>
 
@@ -169,7 +169,7 @@
         <!--SideBar-->
         <aside class="sidebar">
             <div class="area-photo">
-                <img src="img/foto_alen.jpg" alt="My photo" class="photo">
+                <img src="./img/foto_alen.jpg" alt="My photo" class="photo">
             </div>
             <!--Contacts-->
             <div class="contacts">
