--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2 class="about_name">Олег Глазков</h2>
                 <p class="about_description">
                     Розробка сайтів та додатків
-                    з використанням HTML, CSS, JS, React, (Vue, Angular). Верстання сайтів за макетом.
+                    з використанням HTML, CSS, JS, React. Верстання сайтів за макетом.
                 </p>
             </div>
             <div class="projects">
@@ -37,6 +37,16 @@
                             <span class="project_bracked"> [ </span> HTML, CSS, JS, SCSS <span class="project_bracked">
                                 ]</span>,
                             тестовий проект.
+                        </span>
+                    </li>
+                    <li class="projects_item">
+                        Кошик інтернет-магазину оптики (ООП). Сортування товарів (ООП). Слайдер.
+                        <span class="project_string">
+                            , репозиторій:
+                            <a href="https://github.com/alenglazkov/OOP-JS-cart-Glasses"
+                                class="project_link">https://github.com/alenglazkov/OOP-JS-cart-Glasses</a>
+                            <span class="project_bracked"> [ </span> HTML, CSS, JS<span class="project_bracked">
+                                ]</span>
                         </span>
                     </li>
                     <li class="projects_item">
@@ -115,12 +125,13 @@
             <!--Work Experience 3-->
             <div class="work">
                 <h4 class="work_psition">Директор <span class="organization">Аксi Офiс</span>
-                    <span class="organization__profil">(обслуговування офісної техніки, продаж витратних матеріалів)</span>
+                    <span class="organization__profil">(обслуговування офісної техніки, продаж витратних
+                        матеріалів)</span>
                 </h4>
                 <p class="period">Грудень 1998 - Грудень 2021 <span class="line">|</span> Україна</p>
                 <p class="work_list_item"><span class="organization">
                         Головне досягнення:</span> Впроваджено організуючу схему підприємства гнучку та масштабовану.
-                        З нуля організовано сервісний центр із заправки картриджів та ремонту техніки.
+                    З нуля організовано сервісний центр із заправки картриджів та ремонту техніки.
                 </p>
                 <ul class="work_list">
                     <li class="work_list_item">
@@ -135,9 +146,6 @@
                     </li>
                     <li class="work_list_item">
                         Налагодження контактів і спілкування з потенційними гуртовими клієнтами.
-                    </li>
-                    <li class="work_list_item">
-                        Вирішення питань і ситуацій, які за межами компетенції або можливостей співробітників.
                     </li>
                     <li class="work_list_item">
                         Стратегічне планування діяльності.
@@ -187,7 +195,7 @@
             <div class="tech_skils">
                 <h3 class="sidebar-title">Технічні навички</h3>
                 <ul class="tech_skils_list">
-                    <li class="tech_skils_item"> <span class="tech_skils_text">HTML, CSS, SASS/SCSS</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">HTML, CSS, SASS/SCSS, BEM</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Bootstrap</span></li>
                     <!-- <li class="tech_skils_item"> <span class="tech_skils_text"></span></li> -->
                     <li class="tech_skils_item"> <span class="tech_skils_text">JavaScript, ООП JS</span></li>
