--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h3 class="title">Проекти, роботи</h3>
                 <ol class="projects_list">
                     <li class="projects_item">
-                        Тест на IQ.
+                        Тест на IQ. Демонстраційний проект. API.
                         <a href="https://alenglazkov.github.io/Test-IQ/"
                             class="project_link">https://alenglazkov.github.io/Test-IQ</a>
                         <span class="project_string">
@@ -35,8 +35,7 @@
                             <a href="https://github.com/alenglazkov/Test-IQ"
                                 class="project_link">https://github.com/alenglazkov/Test-IQ</a>
                             <span class="project_bracked"> [ </span> HTML, CSS, JS, SCSS <span class="project_bracked">
-                                ]</span>,
-                            тестовий проект.
+                                ]</span>
                         </span>
                     </li>
                     <li class="projects_item">
@@ -50,7 +49,7 @@
                         </span>
                     </li>
                     <li class="projects_item">
-                        Oculus. Сайт гаджетов.
+                        Oculus. Сайт гаджетів. Верстка. Анімація.
                         <a href="https://alenglazkov.github.io/Oculus/"
                             class="project_link">https://alenglazkov.github.io/Oculus</a>
                         <span class="project_string">
@@ -58,30 +57,27 @@
                             <a href="https://github.com/alenglazkov/Oculus"
                                 class="project_link">https://github.com/alenglazkov/Oculus</a>
                             <span class="project_bracked"> [ </span> HTML, CSS, JS, SCSS <span class="project_bracked">
-                                ]</span>,
-                            верстка.
+                                ]</span>
                         </span>
                     </li>
                     <li class="projects_item">
-                        Trevel Japan. Сайт подорожей.
+                        Trevel Japan. Сайт подорожей. Верстка. Плагин Slick slider.
                         <span class="project_string">
                             <a href="https://alenglazkov.github.io/Japan-Travel/"
                                 class="project_link">https://alenglazkov.github.io/Japan-Travel</a>
                             , репозиторій:
                             <a href="https://github.com/alenglazkov/Japan-Travel"
                                 class="project_link">https://github.com/alenglazkov/Japan-Travel</a>
-                            <span class="project_bracked"> [ </span> HTML, CSS, JS <span class="project_bracked">
-                                ]</span>,
-                            верстка.
+                            <span class="project_bracked"> [ </span> HTML, CSS, JS, jQuery<span class="project_bracked">
+                                ]</span>
                         </span>
                     </li>
                     <li class="projects_item">
-                        Cмайл-Пакс. Інтернет-магазин пакування.
+                        Cмайл-Пакс. Інтернет-магазин пакування. Комерційний проект.
                         <span class="project_string">
                             <a href="https://smile-packs.com/" class="project_link">https://smile-packs.com</a>
                             <span class="project_bracked"> [ </span> WordPress,
-                            Woocommerce <span class="project_bracked"> ]</span>,
-                            комерційний проект.
+                            Woocommerce <span class="project_bracked"> ]</span>
                         </span>
                     </li>
                     <!-- <li class="projects_item">
@@ -197,8 +193,8 @@
                 <ul class="tech_skils_list">
                     <li class="tech_skils_item"> <span class="tech_skils_text">HTML, CSS, SASS/SCSS, BEM</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Bootstrap</span></li>
-                    <!-- <li class="tech_skils_item"> <span class="tech_skils_text"></span></li> -->
-                    <li class="tech_skils_item"> <span class="tech_skils_text">JavaScript, ООП JS</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">JavaScript, OOP JS</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">connecting with jQuery</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">React, Redux, Toolkit</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Git, GitLab, GitHub</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">WordPress, Woocommerce</span></li>
