--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" , initiale-scale="1.0">
+    <meta name='freelancehunt' content='8ac4616a92b067a'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -195,9 +196,10 @@
                     <li class="tech_skils_item"> <span class="tech_skils_text">Bootstrap</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">JavaScript, OOP JS</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">connecting with jQuery</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">React, Redux, Toolkit</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">React, Redux Toolkit</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Git, GitLab, GitHub</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">WordPress, Woocommerce</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Gulp</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Figma</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">English: elementary </span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">French: elementary </span></li>
