--- a/index.html
+++ b/index.html
@@ -17,62 +17,28 @@
         <div class="main_content">
             <div class="about">
                 <h3 class="about_position">
-                    Junior Front-end developer.</h3>
+                    Junior PPC manager Google Ads. </h3>
                 <h2 class="about_name">Олег Глазков</h2>
                 <p class="about_description">
-                    Розробка сайтів та додатків
-                    з використанням HTML, CSS, JS, React. Верстання сайтів за макетом.
+                    Створення та ведення ефективних рекламних компаній в Google Ads, що забезпечують якісний потік лідів.
                 </p>
             </div>
             <div class="projects">
                 <h3 class="title">Проекти, роботи</h3>
                 <ol class="projects_list">
                     <li class="projects_item">
-                        Тест на IQ. Демонстраційний проект. API.
-                        <a href="https://alenglazkov.github.io/Test-IQ/"
-                            class="project_link">https://alenglazkov.github.io/Test-IQ</a>
-                        <span class="project_string">
-                            , репозиторій:
-                            <a href="https://github.com/alenglazkov/Test-IQ"
-                                class="project_link">https://github.com/alenglazkov/Test-IQ</a>
-                            <span class="project_bracked"> [ </span> HTML, CSS, JS, SCSS <span class="project_bracked">
-                                ]</span>
-                        </span>
+                        Рекламна кампанія 'Пакети для заморозки' в Google Ads.
                     </li>
                     <li class="projects_item">
-                        Кошик інтернет-магазину оптики (ООП). Сортування товарів (ООП). Слайдер.
+                        Лендінг для реклами в Google Ads.
+                        <a href="https://smile-packs.com/zip-paketi-dlja-zamorozki/"
+                            class="project_link">https://smile-packs.com/zip-paketi-dlja-zamorozki/</a>
                         <span class="project_string">
-                            , репозиторій:
-                            <a href="https://github.com/alenglazkov/OOP-JS-cart-Glasses"
-                                class="project_link">https://github.com/alenglazkov/OOP-JS-cart-Glasses</a>
-                            <span class="project_bracked"> [ </span> HTML, CSS, JS<span class="project_bracked">
-                                ]</span>
+                            , розробка макета, дизайн, написання заголовків і тексту, верстка, встановлення тегів конверсії
+                            
                         </span>
                     </li>
-                    <li class="projects_item">
-                        Oculus. Сайт гаджетів. Верстка. Анімація.
-                        <a href="https://alenglazkov.github.io/Oculus/"
-                            class="project_link">https://alenglazkov.github.io/Oculus</a>
-                        <span class="project_string">
-                            , репозиторій:
-                            <a href="https://github.com/alenglazkov/Oculus"
-                                class="project_link">https://github.com/alenglazkov/Oculus</a>
-                            <span class="project_bracked"> [ </span> HTML, CSS, JS, SCSS <span class="project_bracked">
-                                ]</span>
-                        </span>
-                    </li>
-                    <li class="projects_item">
-                        Trevel Japan. Сайт подорожей. Верстка. Плагин Slick slider.
-                        <span class="project_string">
-                            <a href="https://alenglazkov.github.io/Japan-Travel/"
-                                class="project_link">https://alenglazkov.github.io/Japan-Travel</a>
-                            , репозиторій:
-                            <a href="https://github.com/alenglazkov/Japan-Travel"
-                                class="project_link">https://github.com/alenglazkov/Japan-Travel</a>
-                            <span class="project_bracked"> [ </span> HTML, CSS, JS, jQuery<span class="project_bracked">
-                                ]</span>
-                        </span>
-                    </li>
+                    
                     <li class="projects_item">
                         Cмайл-Пакс. Інтернет-магазин пакування. Комерційний проект.
                         <span class="project_string">
@@ -81,13 +47,6 @@
                             Woocommerce <span class="project_bracked"> ]</span>
                         </span>
                     </li>
-                    <!-- <li class="projects_item">
-                        <span class="project_string">
-                            <a href="https://axi.com.ua/" class="project_link">https://axi.com.ua/</a>
-                            <span class="project_bracked"> [ </span>
-                            WordPress <span class="project_bracked"> ]</span>
-                        </span>
-                    </li>   -->
                 </ol>
             </div>
             <!--Work Experience 1-->
@@ -103,12 +62,20 @@
                     знаннях. 300-400 відвідувачів сайту на місяць. Топ-10 за низькочастотними запитами.
                 </p>
                 <ul class="work_list">
-                    <li class="work_list_item">
-                        Написання рекламних статей для розсилок, оформлення розсилок.
+                      <li class="work_list_item">
+                        Створення та ведення акаунта в Google My Business.
                     </li>
                     <li class="work_list_item">
-                        Розбробка макету сайту, верстання сайту, що включає написання текстів, пошук ключових слів і
-                        налаштування SEO, обробку графічних зображень, встановлення плагинів та ін.
+                        Написання рекламних статей для розсилок, оформлення розсилок через eSputnik.
+                    </li>
+                    <li class="work_list_item">
+                        SEO. Підбір ключових слів, складання мета-тегів і описів, написання SEO-текстів, налаштування SEO через плагін Rank Math та ін.
+                    </li>
+                    <li class="work_list_item">
+                        Підключення сайту до Google Search Console і Google Analytics
+                    </li>
+                    <li class="work_list_item">
+                        Розбробка макету сайту, верстання сайту, що включає написання унікального контенту, обробку графічних зображень, встановлення плагинів та ін.
                     </li>
                     <li class="work_list_item">
                         Аналіз попиту і пропозиції даної ніши товарів і збір даних для ефективного просування і
@@ -132,6 +99,9 @@
                 </p>
                 <ul class="work_list">
                     <li class="work_list_item">
+                        Створення та ведення акаунта в Google My Business.
+                    </li>
+                    <li class="work_list_item">
                         Написання рекламних статей і оформлення розсилок для клієнтів (пошук цікавинок і нестандартної
                         подачі для привертання уваги клієнтів до товару).
                     </li>
@@ -154,11 +124,11 @@
             <div class="education">
                 <h3 class="title">Курси i тенiнги</h3>
                 <h4 class="education_org">IT GID</h4>
-                <p class="specialization">JS, React</p>
+                <p class="specialization">JavaScript, React</p>
                 <p class="period">Серпень 2022 - Квітень 2023 <span class="line">|</span> Україна</p>
 
                 <h4 class="education_org">Prog Academy</h4>
-                <p class="specialization">Верстка HTML/CSS</p>
+                <p class="specialization">Верстка сайтів HTML,CSS</p>
                 <p class="period">Квiтень 2022 - Липень <span class="line">|</span> Україна</p>
             </div>
             <!--Education-->
@@ -188,21 +158,32 @@
                 <a href="mailto:alen_g@ukr.net" class="contact-link">alen_g@ukr.net</a>
                 </p>
             </div>
+            <div class="tech_skils">
+                <h3 class="sidebar-title">Сертифікати Google Ads</h3>
+                <ul class="tech_skils_list">
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Проведення пошукових компаній</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Контекстно-медійна мережа</span></li>
+                </ul>
+            </div>
             <!--Tech Skils-->
             <div class="tech_skils">
                 <h3 class="sidebar-title">Технічні навички</h3>
                 <ul class="tech_skils_list">
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Google Analytcs, Tags Manager</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Google My Business</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">English: elementary </span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">French: elementary </span></li>
+                </ul>
+            </div>
+              <div class="tech_skils">
+                <h3 class="sidebar-title">Навички розробника сайтів</h3>
+                <ul class="tech_skils_list">
                     <li class="tech_skils_item"> <span class="tech_skils_text">HTML, CSS, SASS/SCSS, BEM</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">Bootstrap</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">JavaScript, OOP JS</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">connecting with jQuery</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">JavaScript</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">React, Redux Toolkit</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Git, GitLab, GitHub</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">WordPress, Woocommerce</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">Gulp</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Figma</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">English: elementary </span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">French: elementary </span></li>
                 </ul>
             </div>
             <!--Soft Skils-->
@@ -211,7 +192,7 @@
                 <ul class="tech_skils_list">
                     <li class="tech_skils_item"> <span class="tech_skils_text">Здатність швидко навчатися</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Аналітичні здібності</span></li>
-                    <li class="tech_skils_item"> <span class="tech_skils_text">Уважність</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Уважність до деталей, цифр, даних</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Відповідальність</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Наполегливість</span></li>
                 </ul>
