--- a/en.html
+++ b/en.html
@@ -94,9 +94,35 @@
                     </li>
                 </ol>
             </div>
+             <!--Work Experience 0-->
+             <div class="work">
+                <h3 class="title">Jobs</h3>
+                <h4 class="work_psition">Content manager <span class="organization">  SEM Experts</span>
+                    <span class="organization__profil"></span>
+                </h4>
+                <p class="period">December 2023 - present <span class="line">|</span> Ukraine</p>
+               
+                <p class="work_list_item"><span class="organization__function">
+                    Functions and duties:</span>
+               </p>
+            <ul class="work_list">
+                <li class="work_list_item">
+                    SEO. Selecting keywords, composing meta tags and descriptions for articles.
+                </li>
+                <li class="work_list_item">
+                    Preparation of texts and their structure for product descriptions, categories and articles based on competitor analysis.
+                </li>
+                <li class="work_list_item">
+                    Forming technical tasks for copywriter with SEO tags, descriptions, keywords.
+                </li>
+                <li class="work_list_item">
+                    Creating unique texts.
+                </li>
+          </ul>
+            </div>
             <!--Work Experience 1-->
             <div class="work">
-                <h3 class="title">Jobs</h3>
+                
                 <h4 class="work_psition">PPC specialist Google Ads <span class="organization">  РА PPCRaptor</span>
                   <span class="organization__profil"></span>
               </h4>
