--- a/index.html
+++ b/index.html
@@ -94,9 +94,35 @@
                     </li>
                 </ol>
             </div>
-            <!--Work Experience 1-->
+            <!--Work Experience 0-->
             <div class="work">
                 <h3 class="title">Робота</h3>
+                <h4 class="work_psition">Контент-менеджер <span class="organization">  SEM Experts</span>
+                    <span class="organization__profil"></span>
+                </h4>
+                <p class="period">Грудень 2023 - теперішній час <span class="line">|</span> Україна</p>
+               
+                <p class="work_list_item"><span class="organization__function">
+                    Функції та обов'язки:</span>
+               </p>
+            <ul class="work_list">
+                <li class="work_list_item">
+                    SEO. Підбір ключових слів, складання мета-тегів і описів для статей.
+                </li>
+                <li class="work_list_item">
+                    Підготовка текстів та їхньої структури для описів товарів, категорій і статей на основі аналізу конкурентів.
+                </li>
+                <li class="work_list_item">
+                    Формування технічних завдань для копірайтера з SEO-тегами, описами, ключовими словами.
+                </li>
+                <li class="work_list_item">
+                    Створення унікальних текстів.
+                </li>
+          </ul>
+            </div>
+            <!--Work Experience 1-->
+            <div class="work">
+                
                 <h4 class="work_psition">PPC specialist реклами Google Ads <span class="organization">  РА PPCRaptor</span>
                     <span class="organization__profil"></span>
                 </h4>
