--- a/ru.html
+++ b/ru.html
@@ -94,9 +94,35 @@
                     </li>
                 </ol>
             </div>
-            <!--Work Experience 1-->
+            <!--Work Experience 0-->
             <div class="work">
                 <h3 class="title">Работа</h3>
+                <h4 class="work_psition">Контент-менеджер <span class="organization">  SEM Experts</span>
+                    <span class="organization__profil"></span>
+                </h4>
+                <p class="period">Декабрь 2023 - настоящее время <span class="line">|</span> Украина</p>
+               
+                <p class="work_list_item"><span class="organization__function">
+                     Функции и обязанности:</span>
+               </p>
+            <ul class="work_list">
+                <li class="work_list_item">
+                    SEO. Подбор ключевых слов, составление мета-тегов и описаний для статей.
+                </li>
+                <li class="work_list_item">
+                     Подготовка текстов и их структуры для описаний товаров, категорий и статей на основе анализа конкурентов.
+                </li>
+                <li class="work_list_item">
+                    Формирование технических заданий для копирайтера с SEO-тегами, описаниями, ключевыми словами.
+                </li>
+                <li class="work_list_item">
+                    Создание уникальных текстов.
+                </li>
+          </ul>
+            </div>
+            <!--Work Experience 1-->
+            <div class="work">
+               
                 <h4 class="work_psition">PPC specialist рекламы Google Ads <span class="organization">  РА PPCRaptor</span>
                     <span class="organization__profil"></span>
                 </h4>
