--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
                </p>
             <ul class="work_list">
                 <li class="work_list_item">
-                    SEO. Підбір ключових слів, складання мета-тегів і описів для статей.
+                    Підбір ключових слів для сайтів країн ЄС.
+                </li>
+                <li class="work_list_item">
+                    Підбір ключових слів, складання мета-тегів і описів для статей.
                 </li>
                 <li class="work_list_item">
                     Підготовка текстів та їхньої структури для описів товарів, категорій і статей на основі аналізу конкурентів.
@@ -116,7 +119,7 @@
                     Формування технічних завдань для копірайтера з SEO-тегами, описами, ключовими словами.
                 </li>
                 <li class="work_list_item">
-                    Створення унікальних текстів.
+                    Публікація контенту в WordPress.
                 </li>
           </ul>
             </div>
@@ -255,6 +258,13 @@
                 </p>
             </div>
             <!--Tech Skils-->
+            <div class="tech_skils">
+                <h3 class="sidebar-title">Навички Content</h3>
+                <ul class="tech_skils_list">
+                    <li class="tech_skils_item"> <span class="tech_skils_text">AI Copilot</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">SE Ranking</span></li>
+                </ul>
+            </div>
             <div class="tech_skils">
                 <h3 class="sidebar-title">Навички розробника сайтів</h3>
                 <ul class="tech_skils_list">
