--- a/ru.html
+++ b/ru.html
@@ -107,7 +107,10 @@
                </p>
             <ul class="work_list">
                 <li class="work_list_item">
-                    SEO. Подбор ключевых слов, составление мета-тегов и описаний для статей.
+                    Подбор ключевых слов для сайтов стран ЕС.
+                </li>
+                <li class="work_list_item">
+                    Подбор ключевых слов, составление мета-тегов и описаний для статей.
                 </li>
                 <li class="work_list_item">
                      Подготовка текстов и их структуры для описаний товаров, категорий и статей на основе анализа конкурентов.
@@ -116,7 +119,7 @@
                     Формирование технических заданий для копирайтера с SEO-тегами, описаниями, ключевыми словами.
                 </li>
                 <li class="work_list_item">
-                    Создание уникальных текстов.
+                    Публикация контента в WordPress.
                 </li>
           </ul>
             </div>
@@ -257,6 +260,13 @@
                 </p>
             </div>
             <!--Tech Skils-->
+            <div class="tech_skils">
+                <h3 class="sidebar-title">Навыки Content</h3>
+                <ul class="tech_skils_list">
+                    <li class="tech_skils_item"> <span class="tech_skils_text">AI Copilot</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">SE Ranking</span></li>
+                </ul>
+            </div>
             <div class="tech_skils">
                 <h3 class="sidebar-title">Навыки разработчика сайтов</h3>
                 <ul class="tech_skils_list">
