--- a/en.html
+++ b/en.html
@@ -107,7 +107,10 @@
                </p>
             <ul class="work_list">
                 <li class="work_list_item">
-                    SEO. Selecting keywords, composing meta tags and descriptions for articles.
+                    Selecting keywords for EU websites.
+                </li>
+                <li class="work_list_item">
+                    Selecting keywords, composing meta tags and descriptions for articles.
                 </li>
                 <li class="work_list_item">
                     Preparation of texts and their structure for product descriptions, categories and articles based on competitor analysis.
@@ -116,7 +119,7 @@
                     Forming technical tasks for copywriter with SEO tags, descriptions, keywords.
                 </li>
                 <li class="work_list_item">
-                    Creating unique texts.
+                    Publishing content in WordPress.
                 </li>
           </ul>
             </div>
@@ -261,6 +264,13 @@
                 </p>
             </div>
             <!--Tech Skils-->
+            <div class="tech_skils">
+                <h3 class="sidebar-title">Content Skills</h3>
+                <ul class="tech_skils_list">
+                    <li class="tech_skils_item"> <span class="tech_skils_text">AI Copilot</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">SE Ranking</span></li>
+                </ul>
+            </div>
             <div class="tech_skils">
                 <h3 class="sidebar-title">Skills as a website developer</h3>
                 <ul class="tech_skils_list">
