--- a/en.html
+++ b/en.html
@@ -102,6 +102,19 @@
                 </h4>
                 <p class="period">December 2023 - present <span class="line">|</span> Ukraine</p>
                
+                <p class="work_list_item"><span class="organization">
+                    Accomplishments:</span>
+                </p>
+
+                 <ul class="work_list">
+                    <li class="work_list_item">
+                        Semantics. Collected semantics for SEO-articles on more than 200 product categories in Russian, Ukrainian and English, for multisite on 50 categories for 5 European countries.
+                  </li>
+                  <li class="work_list_item">
+                        Texts. Prepared more than 200 texts on dozens of different topics.
+                  </li>
+                </ul>
+
                 <p class="work_list_item"><span class="organization__function">
                     Functions and duties:</span>
                </p>
@@ -242,7 +255,7 @@
                <h4 class="education_org">Kharkov Aviation Institute</h4>
                <p class="specialization">Economics and Management. Organization of light aircraft production.
                </p>
-               <p class="period">September 1989 - February 1996 <span class="line">|</span> Ukraine</p>
+               <p class="period">February 1999 <span class="line">|</span> Ukraine</p>
                </ul>
            </div>
        </div>
@@ -282,7 +295,7 @@
                     <li class="tech_skils_item"> <span class="tech_skils_text">Git, GitLab, GitHub</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">WordPress, Woocommerce</span></li>
                     <!-- <li class="tech_skils_item"> <span class="tech_skils_text">Gulp</span></li> -->
-                    <li class="tech_skils_item"> <span class="tech_skils_text">Figma</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Figma, Canva</span></li>
                 </ul>
             </div>
             <div class="tech_skils">
