--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
                 </h4>
                 <p class="period">Грудень 2023 - теперішній час <span class="line">|</span> Україна</p>
                
+                <p class="work_list_item"><span class="organization">
+                    Досягнення:</span>
+                </p>
+
+                 <ul class="work_list">
+                    <li class="work_list_item">
+                        Семантика. Зібрав семантику для SEO-статей за понад 200 товарними категоріями російською, українською та англійською мовами, для мультисайту за 50 категоріями для 5 країн Європи.
+                  </li>
+                  <li class="work_list_item">
+                    Тексти. Підготовлено до рерайту понад 200 текстів за десятками різних тематик.
+                  </li>
+                </ul>
+
                 <p class="work_list_item"><span class="organization__function">
                     Функції та обов'язки:</span>
                </p>
@@ -236,7 +249,7 @@
                 <h4 class="education_org">Харківський Авіаційний Iнститут (ХАI)</h4>
                 <p class="specialization">Економiка та Менеджмент. Організація виробництва легких літальних апаратів.
                 </p>
-                <p class="period">Вересень 1989 - Лютий 1996 <span class="line">|</span> Україна</p>
+                <p class="period">Лютий 1999 <span class="line">|</span> Україна</p>
                 </ul>
             </div>
         </div>
@@ -261,7 +274,7 @@
             <div class="tech_skils">
                 <h3 class="sidebar-title">Навички Content</h3>
                 <ul class="tech_skils_list">
-                    <li class="tech_skils_item"> <span class="tech_skils_text">AI Copilot</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">AI</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">SE Ranking</span></li>
                 </ul>
             </div>
@@ -276,7 +289,7 @@
                     <li class="tech_skils_item"> <span class="tech_skils_text">Git, GitLab, GitHub</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">WordPress, Woocommerce</span></li>
                     <!-- <li class="tech_skils_item"> <span class="tech_skils_text">Gulp</span></li> -->
-                    <li class="tech_skils_item"> <span class="tech_skils_text">Figma</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Figma, Canva</span></li>
                 </ul>
             </div>
             <div class="tech_skils">
