--- a/ru.html
+++ b/ru.html
@@ -102,6 +102,19 @@
                 </h4>
                 <p class="period">Декабрь 2023 - настоящее время <span class="line">|</span> Украина</p>
                
+                <p class="work_list_item"><span class="organization">
+                    Достижения:</span>
+                </p>
+
+                 <ul class="work_list">
+                    <li class="work_list_item">
+                      Семантика. Собрал семантику для SEO-статей по более 200 товарным категориям на русском, украинском и английском языках, для мультисайта по 50 категориям для 5 стран Европы.
+                  </li>
+                  <li class="work_list_item">
+                    Тексты. Подготовлено к рерайту более 200 текстов по десяткам различных тематик.
+                  </li>
+                </ul>
+
                 <p class="work_list_item"><span class="organization__function">
                      Функции и обязанности:</span>
                </p>
@@ -238,7 +251,7 @@
                <h4 class="education_org">Харьковский Авиационный Институт (ХАИ)</h4>
                <p class="specialization">Экономика и Менеджмент. Организация производства легких летательных аппаратов.
                </p>
-               <p class="period">Сентябрь 1989 - Февраль 1996 <span class="line">|</span> Украина</p>
+               <p class="period">Февраль 1999 <span class="line">|</span> Украина</p>
                </ul>
            </div>
        </div>
@@ -263,7 +276,7 @@
             <div class="tech_skils">
                 <h3 class="sidebar-title">Навыки Content</h3>
                 <ul class="tech_skils_list">
-                    <li class="tech_skils_item"> <span class="tech_skils_text">AI Copilot</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">AI</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">SE Ranking</span></li>
                 </ul>
             </div>
@@ -278,7 +291,7 @@
                     <li class="tech_skils_item"> <span class="tech_skils_text">Git, GitLab, GitHub</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">WordPress, Woocommerce</span></li>
                     <!-- <li class="tech_skils_item"> <span class="tech_skils_text">Gulp</span></li> -->
-                    <li class="tech_skils_item"> <span class="tech_skils_text">Figma</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Figma, Canva</span></li>
                 </ul>
             </div>
             <div class="tech_skils">
