--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
                 <h4 class="education_org">Prog Academy</h4>
                 <p class="specialization">Верстка HTML/CSS</p>
-                <p class="period">Квiтень 2022 - Липень <span class="line">|</span> Україна</p>
+                <p class="period">Квiтень 2022 - Липень 2022<span class="line">|</span> Україна</p>
             </div>
             <!--Education-->
             <div class="education">
