--- a/ru.html
+++ b/ru.html
@@ -243,7 +243,7 @@
 
                <h4 class="education_org">Prog Academy</h4>
                <p class="specialization">Верстка сайтов HTML, CSS</p>
-               <p class="period">Апрель - июль 2022 года <span class="line">|</span> Украина</p>
+               <p class="period">Апрель 2022 - июль 2022 года <span class="line">|</span> Украина</p>
            </div>
            <!--Education-->
            <div class="education">
