--- a/en.html
+++ b/en.html
@@ -280,7 +280,7 @@
             <div class="tech_skils">
                 <h3 class="sidebar-title">Content Skills</h3>
                 <ul class="tech_skils_list">
-                    <li class="tech_skils_item"> <span class="tech_skils_text">AI Copilot</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">AI</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">SE Ranking</span></li>
                 </ul>
             </div>
